used gitignore file

--- a/03_Scripts/Exercise 2.4.ipynb
+++ b/03_Scripts/Exercise 2.4.ipynb
@@ -75,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Chase\\AppData\\Local\\Temp\\ipykernel_29940\\1607608041.py:2: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Chase\\AppData\\Local\\Temp\\ipykernel_25596\\1607608041.py:2: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  ny_merged_df = pd.read_csv(\"../02_Data/Prepared_Data/ny_data_merged.csv\")\n"
      ]
     }
@@ -88,7 +88,9 @@
   {
    "cell_type": "markdown",
    "id": "876f4058-f182-41c6-8e5a-76f303403c7a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 03. Data Inspection"
    ]
@@ -378,16 +380,14 @@
   {
    "cell_type": "markdown",
    "id": "feb706cb-6a5b-44ad-a5af-4fe59605a7b4",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 04. Change Date Type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "276728d1-35a2-47c9-8111-accf5e330a45",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "69236b09-bcc5-49b1-81b9-1e788fd5af77",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2d65aeb4-3aea-4e9f-8e43-37490d20c3f1",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "array([2022], dtype=int32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "25eae511-d915-420b-91cc-1dacc7387f79",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "a830480b-4abe-44a5-b862-ffdae3757953",
    "metadata": {},
    "outputs": [
@@ -480,13 +480,14 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Work Check for date type change\n",
+    "# Set date as index to build a proper time-series plot\n",
+    "weather_2022 = ny_merged_df.set_index('date')# Work Check for date type change\n",
     "ny_merged_df.dtypes"
    ]
   },
@@ -515,7 +516,9 @@
   {
    "cell_type": "markdown",
    "id": "14ed3b23-b747-453a-99fc-bc9c7cba61f4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 06. Top 20 Starting Stations"
    ]
@@ -606,7 +609,9 @@
   {
    "cell_type": "markdown",
    "id": "ec6f35de-662d-4aac-82a0-42e2d0eee636",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Bar Chart Plotting"
    ]
@@ -887,9 +892,7 @@
   {
    "cell_type": "markdown",
    "id": "82c53fb8-91d2-4664-8b56-0924fd7abb65",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 08. Blox-Plot Chart"
    ]
@@ -905,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "f4af2232-5e3e-43fd-8cb7-8e25c8e2ad9b",
    "metadata": {},
    "outputs": [],
@@ -917,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "242f4d24-7084-4c05-b181-941754e4a529",
    "metadata": {},
    "outputs": [],
@@ -930,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "1c07537d-a37f-493b-a08c-d70496cabc0d",
    "metadata": {},
    "outputs": [
@@ -948,7 +951,7 @@
        "Name: tripduration, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "acfcbc88-6e81-4727-96b0-9da81d960570",
    "metadata": {},
    "outputs": [
@@ -980,7 +983,7 @@
        "Name: tripduration, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "195d1649-65a0-4e2c-8ed6-99d3f004b0ae",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1015,7 @@
        "Name: tripduration, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "6d7bc6e7-fa02-49dc-8cc9-c7d8ed9cd461",
    "metadata": {},
    "outputs": [],
@@ -1038,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "edd57fa5-7cf8-4ac2-b771-913ebd435250",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1059,7 @@
        "Name: tripduration, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "e3b07129-6232-49f8-aba8-73b4c116900d",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "777ca5eb-d577-45fd-a596-6ecc7169fdb2",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1113,7 @@
        "Name: tripduration, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,6 +1121,327 @@
    "source": [
     "# Work check and summary stats for the focused range\n",
     "tripdur_focus_df['tripduration'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8a7c5a2c-e9dc-4e4d-aae7-141dbbb915fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>rideable_type</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>end_lat</th>\n",
+       "      <th>end_lng</th>\n",
+       "      <th>member_casual</th>\n",
+       "      <th>date</th>\n",
+       "      <th>avgTemp</th>\n",
+       "      <th>_merge</th>\n",
+       "      <th>bike_rides_daily</th>\n",
+       "      <th>tripduration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4A091640AEC83471</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2022-01-01 16:01:22.082</td>\n",
+       "      <td>2022-01-01 16:05:11.986</td>\n",
+       "      <td>S 4 St &amp; Wythe Ave</td>\n",
+       "      <td>5204.05</td>\n",
+       "      <td>Kent Ave &amp; S 11 St</td>\n",
+       "      <td>5062.01</td>\n",
+       "      <td>40.712859</td>\n",
+       "      <td>-73.965903</td>\n",
+       "      <td>40.707645</td>\n",
+       "      <td>-73.968415</td>\n",
+       "      <td>member</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>both</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>3.831733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7A560D6287C00126</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2022-01-01 14:07:04.344</td>\n",
+       "      <td>2022-01-01 14:31:57.500</td>\n",
+       "      <td>Lexington Ave &amp; E 120 St</td>\n",
+       "      <td>7652.04</td>\n",
+       "      <td>Amsterdam Ave &amp; W 125 St</td>\n",
+       "      <td>7800.03</td>\n",
+       "      <td>40.801307</td>\n",
+       "      <td>-73.939817</td>\n",
+       "      <td>40.813358</td>\n",
+       "      <td>-73.956461</td>\n",
+       "      <td>member</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>both</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>24.885933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4F6F726B809C15E4</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2022-01-01 12:02:26.943</td>\n",
+       "      <td>2022-01-01 12:14:13.555</td>\n",
+       "      <td>Lexington Ave &amp; E 120 St</td>\n",
+       "      <td>7652.04</td>\n",
+       "      <td>Amsterdam Ave &amp; W 125 St</td>\n",
+       "      <td>7800.03</td>\n",
+       "      <td>40.801307</td>\n",
+       "      <td>-73.939817</td>\n",
+       "      <td>40.813358</td>\n",
+       "      <td>-73.956461</td>\n",
+       "      <td>member</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>both</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>11.776867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3BC10DC94FD79955</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2022-01-01 22:53:23.508</td>\n",
+       "      <td>2022-01-01 23:18:42.881</td>\n",
+       "      <td>Cleveland Pl &amp; Spring St</td>\n",
+       "      <td>5492.05</td>\n",
+       "      <td>Mott St &amp; Prince St</td>\n",
+       "      <td>5561.04</td>\n",
+       "      <td>40.722104</td>\n",
+       "      <td>-73.997249</td>\n",
+       "      <td>40.723180</td>\n",
+       "      <td>-73.994800</td>\n",
+       "      <td>member</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>both</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>25.322883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FE4CE7F1CFFD7952</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2022-01-01 08:04:51.755</td>\n",
+       "      <td>2022-01-01 08:08:07.290</td>\n",
+       "      <td>Central Park North &amp; Adam Clayton Powell Blvd</td>\n",
+       "      <td>7617.07</td>\n",
+       "      <td>E 110 St &amp; Madison Ave</td>\n",
+       "      <td>7587.14</td>\n",
+       "      <td>40.799484</td>\n",
+       "      <td>-73.955613</td>\n",
+       "      <td>40.796154</td>\n",
+       "      <td>-73.947821</td>\n",
+       "      <td>member</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>both</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>3.258917</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ride_id rideable_type              started_at  \\\n",
+       "0  4A091640AEC83471  classic_bike 2022-01-01 16:01:22.082   \n",
+       "1  7A560D6287C00126  classic_bike 2022-01-01 14:07:04.344   \n",
+       "2  4F6F726B809C15E4  classic_bike 2022-01-01 12:02:26.943   \n",
+       "3  3BC10DC94FD79955  classic_bike 2022-01-01 22:53:23.508   \n",
+       "4  FE4CE7F1CFFD7952  classic_bike 2022-01-01 08:04:51.755   \n",
+       "\n",
+       "                 ended_at                             start_station_name  \\\n",
+       "0 2022-01-01 16:05:11.986                             S 4 St & Wythe Ave   \n",
+       "1 2022-01-01 14:31:57.500                       Lexington Ave & E 120 St   \n",
+       "2 2022-01-01 12:14:13.555                       Lexington Ave & E 120 St   \n",
+       "3 2022-01-01 23:18:42.881                       Cleveland Pl & Spring St   \n",
+       "4 2022-01-01 08:08:07.290  Central Park North & Adam Clayton Powell Blvd   \n",
+       "\n",
+       "  start_station_id          end_station_name end_station_id  start_lat  \\\n",
+       "0          5204.05        Kent Ave & S 11 St        5062.01  40.712859   \n",
+       "1          7652.04  Amsterdam Ave & W 125 St        7800.03  40.801307   \n",
+       "2          7652.04  Amsterdam Ave & W 125 St        7800.03  40.801307   \n",
+       "3          5492.05       Mott St & Prince St        5561.04  40.722104   \n",
+       "4          7617.07    E 110 St & Madison Ave        7587.14  40.799484   \n",
+       "\n",
+       "   start_lng    end_lat    end_lng member_casual       date  avgTemp _merge  \\\n",
+       "0 -73.965903  40.707645 -73.968415        member 2022-01-01     11.6   both   \n",
+       "1 -73.939817  40.813358 -73.956461        member 2022-01-01     11.6   both   \n",
+       "2 -73.939817  40.813358 -73.956461        member 2022-01-01     11.6   both   \n",
+       "3 -73.997249  40.723180 -73.994800        member 2022-01-01     11.6   both   \n",
+       "4 -73.955613  40.796154 -73.947821        member 2022-01-01     11.6   both   \n",
+       "\n",
+       "   bike_rides_daily  tripduration  \n",
+       "0             20428      3.831733  \n",
+       "1             20428     24.885933  \n",
+       "2             20428     11.776867  \n",
+       "3             20428     25.322883  \n",
+       "4             20428      3.258917  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tripdur_focus_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "90468acf-c6ce-4376-b952-594c8f9e2729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keep the needed columns\n",
+    "cols_to_keep = ['member_casual', 'tripduration', 'date']\n",
+    "tripdur_focus_clean = tripdur_focus_df[cols_to_keep].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f395fec6-9003-4235-b271-299d5d54ad43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>member_casual</th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>member</td>\n",
+       "      <td>3.831733</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>member</td>\n",
+       "      <td>24.885933</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>member</td>\n",
+       "      <td>11.776867</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>member</td>\n",
+       "      <td>25.322883</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>member</td>\n",
+       "      <td>3.258917</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  member_casual  tripduration       date\n",
+       "0        member      3.831733 2022-01-01\n",
+       "1        member     24.885933 2022-01-01\n",
+       "2        member     11.776867 2022-01-01\n",
+       "3        member     25.322883 2022-01-01\n",
+       "4        member      3.258917 2022-01-01"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tripdur_focus_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "703891fc-edae-428a-8203-169db70b0e08",
+   "metadata": {},
+   "source": [
+    "#### Export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2cec4007-3345-4bc8-a8a5-708d728cadb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tripdur_focus_clean.to_csv(\n",
+    "    \"../02_Data/Prepared_Data/tripduration_focus.csv\",\n",
+    "    index=False\n",
+    ")"
    ]
   },
   {
