New file imports and file updates

--- a/03_Scripts/Exercise 2.4.ipynb
+++ b/03_Scripts/Exercise 2.4.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "markdown",
    "id": "55037fb3-e53c-4b90-8e6a-1ac1ccadc743",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 01. Research Questions & Planned Visualizations"
    ]
@@ -46,7 +48,9 @@
   {
    "cell_type": "markdown",
    "id": "f9ded75f-342e-4a3d-9642-71affe6a17d4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 02. Libraires/ Imports"
    ]
@@ -380,7 +384,9 @@
   {
    "cell_type": "markdown",
    "id": "feb706cb-6a5b-44ad-a5af-4fe59605a7b4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 04. Change Date Type"
    ]
@@ -900,7 +906,9 @@
   {
    "cell_type": "markdown",
    "id": "772e2bf5-2ff2-4c16-adad-2e6aec94ea46",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Trip Duration\n",
     "- Create a column for trip duration"
@@ -1447,7 +1455,9 @@
   {
    "cell_type": "markdown",
    "id": "71d5923c-65be-4eca-8dd1-49669f31a543",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Box Plot"
    ]
@@ -1506,7 +1516,9 @@
   {
    "cell_type": "markdown",
    "id": "08d9541a-5aae-4c0e-9782-9c3cf031d6a5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 09. FacetGrid Chart"
    ]
@@ -1569,7 +1581,9 @@
   {
    "cell_type": "markdown",
    "id": "216c32a5-b7af-4886-8db7-15aeb1e2b5a1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Export"
    ]
